styles/media-query.css
/* Below 1440px (Smaller Desktops */
@media only screen and (max-width: 90em) {
}

/* Below 1200px (Landscape Tablets) */

@media only screen and (max-width: 75em) {
    html {
        font-size: 56.25%; /* 9px */
    }

    .row {
        padding: 0 var(--spacing-11);
    }

    /* ---------- TrustedBy Section ---------- */

    .trustedby-section__logos {
        justify-content: center;
        gap: var(--spacing-10);
    }
}

/* Below 900px (Tablets) */

@media only screen and (max-width: 56.25em) {
    html {
        font-size: 50%; /* 8px */
    }

    /* ---------- Advantages Section ---------- */

    .row.advantages-section__content {
        padding-right: var(--spacing-11);
        flex-direction: column;
    }

    /* ---------- Package Section ---------- */

    .row.package-section__content {
        flex-direction: column-reverse;
        margin-bottom: var(--spacing-12);
    }

    /* ---------- Footer---------- */

    .footer__content {
        gap: var(--spacing-7);
    }

    .company__brand {
        flex: 100%;
    }
}

/* Below 768px (Smaller Tablets) */

@media only screen and (max-width: 48em) {
    html {
        font-size: 43.75%; /* 7px */
    }
    .row {
        padding: 0 var(--spacing-10);
    }
}

@media only screen and (max-width: 30em) {
    .row {
        padding: 0 var(--spacing-9);
    }

    section,
    footer {
        padding: var(--spacing-12) 0;
    }
    /* ---------- Typography ---------- */

    .heading-1 {
        font-size: var(--font-size-11);
        line-height: var(--line-height-11);
    }

    h2 {
        font-size: var(--font-size-10);
        line-height: var(--line-height-10);
    }

    /* ---------- Header ---------- */

    .header__buttons {
        flex-direction: column;
        gap: var(--spacing-7);
        margin-bottom: var(--spacing-7);
    }

    .advantages-section__list li {
        flex: 100%;
    }
}

